--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   dropdown_button2: ^2.3.9
-  animated_splash_screen: ^1.3.0
+  # animated_splash_screen: ^1.3.0
   flutter_carousel_widget: ^3.0.1
   cached_network_image: ^3.3.1
   bottom_sheet: ^4.0.4
@@ -77,7 +77,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/logo.jpg"
+  image_path: "assets/images/logo-removebg.png"
 
   
   flutter_lints: ^3.0.0
