--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,9 @@ dependencies:
   # flutter_typeahead: ^5.2.0
   # share_plus: ^10.0.2
   flutter_native_splash: ^2.4.3
+  smooth_page_indicator: ^1.2.0+3
+  flutter_html: ^3.0.0-beta.2
+  # flutter_staggered_grid_view: ^0.7.0
 
 
 dev_dependencies:
